--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,9 @@
     <string name="title_discover_fragment">Discover</string>
     <string name="title_connections_fragment">Connections</string>
     <string name="title_profile_fragment">Profile</string>
+
     <string name="facebook_app_id">295302177626576</string>
     <string name="fb_login_protocol_scheme">fb295302177626576</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="pref_gender">Gender</string>
 </resources>
